refactor(tasks): remove bulk operation checkbox
Related to: CAM-2777

--- a/client/client/scripts/form/styles.less
+++ b/client/client/scripts/form/styles.less
@@ -4,8 +4,8 @@
 
   >.view {
     border: 1px solid transparent;
-    margin: 0 2px;
-    padding: 3px 4px;
+    margin: 0;
+    padding: 3px;
     position: relative;
 
     &:hover {
