refactor(diagram): uncomment the diagram tab
refactor(diagram): update the bpmn-js bower package
fix(diagram): correct highlighted diagram element style
fix(diagram): bind Snap.svg to the window object before loading bpmn-js

Related to: CAM-2652

--- a/client/client/scripts/task/styles.less
+++ b/client/client/scripts/task/styles.less
@@ -71,6 +71,9 @@
   }
 }
 
+.diagram-holder .highlight .djs-visual>:nth-child(1) {
+  fill: @alert-info-bg !important;
+}
 
 .row.day {
   margin-top: (@grid-gutter-width / 1);
