--- a/client/client/scripts/task/styles.less
+++ b/client/client/scripts/task/styles.less
@@ -31,6 +31,19 @@
   }
 }
 
+.not-assignee {
+  position: relative;
+  &:before {
+    content: ' ';
+    background-color: rgba(255, 255, 255, 0.8);
+    position: absolute;
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 100%;
+  }
+}
+
 [cam-tasklist-task-meta] {
   position: relative;
   z-index: 10;
