refactor(task diagram): improve loading and rendering of diagram
refactor(task diagram): hide the bpmn-io logo

Related to: CAM-2652

--- a/client/client/scripts/task/styles.less
+++ b/client/client/scripts/task/styles.less
@@ -84,8 +84,14 @@
   }
 }
 
-.diagram-holder .highlight .djs-visual>:nth-child(1) {
-  fill: @alert-info-bg !important;
+.diagram-holder {
+  .bjs-container > a {
+    display: none;
+  }
+
+  .highlight .djs-visual>:nth-child(1) {
+    fill: @alert-info-bg !important;
+  }
 }
 
 .row.day {
