feat(history): add form to add comments to a task
Introduce a modal form to enter comments for a task

Related to CAM-2770

--- a/client/client/scripts/task/styles.less
+++ b/client/client/scripts/task/styles.less
@@ -182,6 +182,10 @@
   padding-right: (@grid-gutter-width / 2); 
 }
 
+#comment-form-message {
+  height: 150px;
+}
+
 // .well.no-task {
 //   margin-top: 15px;
 // }
