feat(search): add search box to search within selected filter
related to CAM-2756

--- a/client/client/scripts/form/styles.less
+++ b/client/client/scripts/form/styles.less
@@ -21,6 +21,7 @@
     input {
       max-height: 30px;
       color: inherit;
+      background-color: transparent;
     }
   }
 
@@ -50,6 +51,14 @@
     }
     thead button {
       height: 28px;
+    }
+  }
+
+  &[type="option"] {
+    vertical-align: top;
+    .dropdown-menu {
+      min-width: initial;
+      text-align: left;
     }
   }
 
