fix(task dates): leave editing mode of inline fields when task changes
Related to: CAM-2623

style(task meta): remove some commented code

impr(task history): align the user name on the right

fix(inline field): reset the edit value

Related to: CAM-2623

--- a/client/client/scripts/task/styles.less
+++ b/client/client/scripts/task/styles.less
@@ -174,12 +174,12 @@
 }
 
 .operation-user {
-  float: right;
+  text-align: right;
 }
 
 .event-property {
   font-weight: bold;
-  padding-right: (@grid-gutter-width / 2); 
+  padding-right: (@grid-gutter-width / 2);
 }
 
 #comment-form-message {
