impr(inline field): automatically focus input field
automatically focus inline input fields when entering the edit state

--- a/client/client/scripts/form/styles.less
+++ b/client/client/scripts/form/styles.less
@@ -12,7 +12,7 @@
       z-index: 99;
       cursor: pointer;
       border: 1px dashed @gray-light;
-      background-color: @body-bg;
+      background-color: transparent;
     }
   }
 
@@ -20,6 +20,7 @@
     min-height: 30px;
     input {
       max-height: 30px;
+      color: inherit;
     }
   }
 
