--- a/client/client/styles/styles.less
+++ b/client/client/styles/styles.less
@@ -299,6 +299,7 @@ strong {
 @import "../scripts/form/styles.less";
 @import "../scripts/user/styles.less";
 @import "../scripts/process/styles.less";
+@import "../scripts/variable/styles.less";
 
 
 /*
