--- a/client/client/scripts/navigation/styles.less
+++ b/client/client/scripts/navigation/styles.less
@@ -1,68 +1,99 @@
-.search-container {
-  background-color: #fff;
-  border: 1px solid #ccc;
-  box-shadow: inset 0 1px 1px rgba(0, 0, 0, 0.075);
-  display: table;
-  padding: 4px 6px;
-  margin-bottom: 10px;
-  color: #555;
-  vertical-align: middle;
-  border-radius: 4px;
-  width: 100%;
-  line-height: 22px;
-  cursor: text;
-  text-align: left;
-}
+[cam-task-search] {
 
-.search-container input {
-  border: 0;
-  box-shadow: none;
-  outline: none;
-  background-color: transparent;
-  padding: 0;
-  margin-left: 5px;
-  width: 100%;
-  display: table-cell;
-  max-width: inherit;
-}
+  .search-container {
+    // background-color: #fff;
+    // border: 1px solid #ccc;
+    // box-shadow: inset 0 1px 1px rgba(0, 0, 0, 0.075);
+    // display: table;
+    // padding: 4px 6px;
+    // margin-bottom: 10px;
+    // color: #555;
+    // vertical-align: middle;
+    // border-radius: 4px;
+    // width: 100%;
+    // line-height: 22px;
+    // cursor: text;
+    // text-align: left;
 
-.search-label {
-  display: table-cell;
-  color: #fff;
-  text-align: center;
-  white-space: nowrap;
-  vertical-align: baseline;
-  border-radius: .25em;
-  background-color: #5BC0DE;
-  padding: 2px;
-  margin-right: 5px;
-}
+    // ----------------------
 
-.invalid-search {
-  background-color: #DE5B5B;
-}
+    .form-control();
+    // padding: 6px 12px;
+    height: auto;
+  }
 
-.remove-search {
-  margin-right: 3px;
-}
+  .search-container input {
+    // border: 0;
+    // box-shadow: none;
+    // outline: none;
+    // background-color: transparent;
+    // padding: 0;
+    // margin-left: 5px;
+    // width: 100%;
+    // display: table-cell;
+    // max-width: inherit;
 
-.search-field {
-  text-align: left;
+    // ----------------------
+    padding: 0;
+    height: auto;
+    border: none;
+    -webkit-box-shadow: none;
+    box-shadow: none;
 
-  //activate block formatting context to fit beside sorting field
-  display: flex;
-}
+    &:focus {
+      border: none;
+      -webkit-box-shadow: none;
+      box-shadow: none;
+    }
+  }
 
-.search-field input {
-  width: 100%;
-}
+  .search-label {
+    // display: table-cell;
+    // color: #fff;
+    // text-align: center;
+    // white-space: nowrap;
+    // vertical-align: baseline;
+    // border-radius: .25em;
+    // background-color: #5BC0DE;
+    // padding: 2px;
+    // margin-right: 5px;
 
-.task-search {
-  text-align: left;
-  width: auto;
-}
+    // ----------------------
 
-.search-dropdown {
-  top: initial;
-  left: initial;
+    // .input-size();
+    // position: relative;
+    // left: 15px;
+    clear: both;
+    float: left;
+  }
+
+  .invalid-search {
+    // background-color: #DE5B5B;
+  }
+
+  .remove-search {
+    // margin-right: 3px;
+  }
+
+  .search-field {
+  //   text-align: left;
+
+  //   //activate block formatting context to fit beside sorting field
+  //   display: flex;
+  }
+
+  .search-field input {
+    // width: 100%;
+  }
+
+  .task-search {
+    // text-align: left;
+    // width: auto;
+  }
+
+  .search-dropdown {
+    // top: initial;
+    // left: initial;
+    left: 15px;
+  }
 }
