impr(variable search): work on styles of task search by variable

--- a/client/client/styles/layout.less
+++ b/client/client/styles/layout.less
@@ -107,6 +107,11 @@ footer.page {
   }
 }
 
+
+[cam-task-search] {
+  text-align: left;
+}
+
 .task-board [cam-task-search] {
   margin: (@grid-gutter-width / 2) 0;
 }
