--- a/client/client/scripts/navigation/styles.less
+++ b/client/client/scripts/navigation/styles.less
@@ -1,39 +1,18 @@
 [cam-task-search] {
+  .valid-hide {
+    display: none;
+  }
+
+  .invalid .valid-hide {
+    display: initial;
+  }
 
   .search-container {
-    // background-color: #fff;
-    // border: 1px solid #ccc;
-    // box-shadow: inset 0 1px 1px rgba(0, 0, 0, 0.075);
-    // display: table;
-    // padding: 4px 6px;
-    // margin-bottom: 10px;
-    // color: #555;
-    // vertical-align: middle;
-    // border-radius: 4px;
-    // width: 100%;
-    // line-height: 22px;
-    // cursor: text;
-    // text-align: left;
-
-    // ----------------------
-
     .form-control();
-    // padding: 6px 12px;
     height: auto;
   }
 
-  .search-container input {
-    // border: 0;
-    // box-shadow: none;
-    // outline: none;
-    // background-color: transparent;
-    // padding: 0;
-    // margin-left: 5px;
-    // width: 100%;
-    // display: table-cell;
-    // max-width: inherit;
-
-    // ----------------------
+  .search-container > input {
     padding: 0;
     height: auto;
     border: none;
@@ -48,52 +27,46 @@
   }
 
   .search-label {
-    // display: table-cell;
-    // color: #fff;
-    // text-align: center;
-    // white-space: nowrap;
-    // vertical-align: baseline;
-    // border-radius: .25em;
-    // background-color: #5BC0DE;
-    // padding: 2px;
-    // margin-right: 5px;
-
-    // ----------------------
-
-    // .input-size();
-    // position: relative;
-    // left: 15px;
     clear: both;
-    float: left;
+
+    padding: 1px 2px;
+    margin: 0 0 2px 0;
+    border-radius: 3px;
+    display: block;
+
+
+    &.invalid {
+      .alert-danger();
+      border-width: 1px;
+      border-style: solid;
+    }
+
+    [cam-form-inline-field] {
+      margin-top: -2px;
+      margin-bottom: -2px;
+    }
   }
 
-  .invalid-search {
-    // background-color: #DE5B5B;
-  }
+  // .invalid-search {
+  // }
 
-  .remove-search {
-    // margin-right: 3px;
-  }
+  // .remove-search {
+  // }
 
-  .search-field {
-  //   text-align: left;
+  // .search-field {
+  // }
 
-  //   //activate block formatting context to fit beside sorting field
-  //   display: flex;
-  }
+  // .search-field input {
+  // }
 
-  .search-field input {
-    // width: 100%;
-  }
-
-  .task-search {
-    // text-align: left;
-    // width: auto;
-  }
+  // .task-search {
+  // }
 
   .search-dropdown {
-    // top: initial;
-    // left: initial;
     left: 15px;
+    margin-top: -1px;
+    & > li > a {
+      padding: (@grid-gutter-width / 10) (@grid-gutter-width / 2);
+    }
   }
 }
