impr(plugins): add two "frontend" plugin points
- tasklist.task.action
- tasklist.task.detail

related to CAM-2914

--- a/client/client/scripts/form/styles.less
+++ b/client/client/scripts/form/styles.less
@@ -2,7 +2,7 @@
   display: inline-block;
   position: relative;
 
-  >.view {
+  >.view-value {
     border: 1px solid transparent;
     margin: 0;
     padding: 1px 3px;
