--- a/client/client/scripts/process/styles.less
+++ b/client/client/scripts/process/styles.less
@@ -10,7 +10,7 @@ ul.processes {
 .processes {
   li {
     padding: 7px 0;
-    border-bottom: dashed 1px @gray-light;
+    border-bottom: @border-style 1px @gray-light;
 
     // &:nth-child(even) {
     //   background-color: @gray-lighter;
