--- a/client/client/styles/_loader.less
+++ b/client/client/styles/_loader.less
@@ -1,71 +1,93 @@
-/*
-http://projects.lukehaas.me/css-loaders
-
-<div class="loader">Loading...</div>
-*/
 .loader {
-  @size: 20px;
-  border-radius: 50%;
+  color: @gray-light;
+  text-align: center;
+  margin: 20px auto;
+  .glyphicon {
+    font-size: 11px;
+    margin: 0 5px;
+  }
+}
 
-  font-size: ((@size / 2) + 1);
-  text-indent: -99999em;
-  margin: (@size * 1) auto;
-  position: relative;
-  width: @size;
-  height: @size;
-  // box-shadow: inset 0 0 0 1em #FFF;
+.animate-spin {
+  -moz-animation: spin 2s infinite linear;
+  -o-animation: spin 2s infinite linear;
+  -webkit-animation: spin 2s infinite linear;
+  animation: spin 2s infinite linear;
+  display: inline-block;
+}
 
-  &:before,
-  &:after {
-    border-radius: 50%;
+@-moz-keyframes spin {
+  0% {
+    -moz-transform: rotate(0deg);
+    -o-transform: rotate(0deg);
+    -webkit-transform: rotate(0deg);
+    transform: rotate(0deg);
   }
-  &:before,
-  &:after {
-    position: absolute;
-    content: '';
+
+  100% {
+    -moz-transform: rotate(359deg);
+    -o-transform: rotate(359deg);
+    -webkit-transform: rotate(359deg);
+    transform: rotate(359deg);
   }
-  &:before {
-    width: ((@size / 2) + 2);
-    height: (@size + 4);
-    background: @brand-primary;
-    border-radius: (@size + 4) 0 0 (@size + 4);
-    top: -1px;
-    left: -1px;
-    -webkit-transform-origin: ((@size / 2) + 2) ((@size / 2) + 1);
-    transform-origin: ((@size / 2) + 2) ((@size / 2) + 1);
-    -webkit-animation: load2 2s infinite ease 1.5s;
-    animation: load2 2s infinite ease 1.5s;
+}
+@-webkit-keyframes spin {
+  0% {
+    -moz-transform: rotate(0deg);
+    -o-transform: rotate(0deg);
+    -webkit-transform: rotate(0deg);
+    transform: rotate(0deg);
   }
-  &:after {
-    width: ((@size / 2) + 2);
-    height: (@size + 4);
-    background: @brand-primary;
-    border-radius: 0 (@size + 4) (@size + 4) 0;
-    top: -1px;
-    left: ((@size / 2) + 1);
-    -webkit-transform-origin: 0px ((@size / 2) + 1);
-    transform-origin: 0px ((@size / 2) + 1);
-    -webkit-animation: load2 2s infinite ease;
-    animation: load2 2s infinite ease;
+
+  100% {
+    -moz-transform: rotate(359deg);
+    -o-transform: rotate(359deg);
+    -webkit-transform: rotate(359deg);
+    transform: rotate(359deg);
   }
-  @-webkit-keyframes load2 {
-    0% {
-      -webkit-transform: rotate(0deg);
-      transform: rotate(0deg);
-    }
-    100% {
-      -webkit-transform: rotate(360deg);
-      transform: rotate(360deg);
-    }
+}
+@-o-keyframes spin {
+  0% {
+    -moz-transform: rotate(0deg);
+    -o-transform: rotate(0deg);
+    -webkit-transform: rotate(0deg);
+    transform: rotate(0deg);
   }
-  @keyframes load2 {
-    0% {
-      -webkit-transform: rotate(0deg);
-      transform: rotate(0deg);
-    }
-    100% {
-      -webkit-transform: rotate(360deg);
-      transform: rotate(360deg);
-    }
+
+  100% {
+    -moz-transform: rotate(359deg);
+    -o-transform: rotate(359deg);
+    -webkit-transform: rotate(359deg);
+    transform: rotate(359deg);
+  }
+}
+@-ms-keyframes spin {
+  0% {
+    -moz-transform: rotate(0deg);
+    -o-transform: rotate(0deg);
+    -webkit-transform: rotate(0deg);
+    transform: rotate(0deg);
+  }
+
+  100% {
+    -moz-transform: rotate(359deg);
+    -o-transform: rotate(359deg);
+    -webkit-transform: rotate(359deg);
+    transform: rotate(359deg);
+  }
+}
+@keyframes spin {
+  0% {
+    -moz-transform: rotate(0deg);
+    -o-transform: rotate(0deg);
+    -webkit-transform: rotate(0deg);
+    transform: rotate(0deg);
+  }
+
+  100% {
+    -moz-transform: rotate(359deg);
+    -o-transform: rotate(359deg);
+    -webkit-transform: rotate(359deg);
+    transform: rotate(359deg);
   }
 }
