impr(style): work on layout
Changed the history date "badge" and separation lines.

Related to CAM-2915

--- a/client/client/scripts/process/styles.less
+++ b/client/client/scripts/process/styles.less
@@ -10,7 +10,7 @@ ul.processes {
 .processes {
   li {
     padding: 7px 0;
-    border-bottom: @border-style 1px @gray-light;
+    border-bottom: 1px @line-style @line-color;
 
     // &:nth-child(even) {
     //   background-color: @gray-lighter;
