--- a/client/client/styles/layout.less
+++ b/client/client/styles/layout.less
@@ -68,7 +68,7 @@ footer.page {
 
 .task-board {
   > .cols > .inner {
-    border-top: 1px @border-style @gray-light;
+    border-top: 1px @line-style @line-color;
     padding-top: (@grid-gutter-width / 2);
   }
 
