--- a/client/client/styles/styles.less
+++ b/client/client/styles/styles.less
@@ -101,12 +101,18 @@
 @column-center-bg:                  darken(@body-bg, @column-darkening * (6.18 * 0.618));
 @column-right-bg:                   darken(@body-bg, @column-darkening * 0);
 
+
 @footer-height:                     25px;
 
-// @border-style:                      dashed;
-// @border-style:                      solid;
-@border-style:                      dotted;
 
+@line-style:                        dotted;
+@line-color:                        @gray-light;
+
+@line-style-alt:                    solid;
+@line-color-alt:                    #ddd;
+
+// @line-style:                        solid;
+// @line-color:                        #333;
 
 
 
