--- a/client/client/scripts/filter/styles.less
+++ b/client/client/scripts/filter/styles.less
@@ -122,7 +122,7 @@
 .tasks-list {
   > li {
     margin: 0;
-    border-top: 1px @border-style @gray-light;
+    border-top: 1px @line-style @line-color;
     padding: (@grid-gutter-width / 2) 0;
 
     min-height: 90px;
