--- a/client/client/scripts/form/styles.less
+++ b/client/client/scripts/form/styles.less
@@ -14,7 +14,7 @@
     &:hover {
       z-index: 99;
       cursor: pointer;
-      border: 1px @border-style @gray-light;
+      border: 1px @line-style @line-color;
       // background-color: transparent;
       background-color: @gray-lighter;
     }
