--- a/client/client/scripts/task/styles.less
+++ b/client/client/scripts/task/styles.less
@@ -114,7 +114,7 @@
 
 .day.row {
   margin-top: (@grid-gutter-width / 1);
-  border-top: 1px @border-style @gray-light;
+  border-top: 1px @line-style @line-color;
   padding-top: (@grid-gutter-width / 1);
 
   margin-bottom: (@grid-gutter-width / 1);
@@ -155,7 +155,7 @@
       width: 100%;
       height: 1px;
       margin-top: -1px;
-      border-top: 1px @border-style @gray-light;
+      border-top: 1px @line-style-alt @line-color-alt;
       margin-bottom: (@grid-gutter-width / 2);
     }
   }
@@ -179,21 +179,37 @@
 }
 
 .date-badge {
+  max-width: 75px;
+  margin: auto;
+
+  > div {
+    border-radius: 50%;
+    width: 100%;
+    height: 0;
+    padding-bottom: 100%;
+
+    overflow: hidden;
+    background-color: @gray-lighter;
+  }
+
   span {
     display: block;
     width: 100%;
     text-align: center;
+
+    white-space: nowrap;
+    overflow: hidden;
+    text-overflow: ellipsis;
   }
 
   .day {
     font-size: 16px;
+    margin-top: 5px;
   }
 
   .month {
-    padding: 3px 0;
-    margin: 3px 0;
-    border: 1px @border-style @gray-light;
-    border-width: 1px 0;
+    // padding: 3px 0;
+    // margin: 3px 0;
   }
 }
 
