chore(groups): localize labels in edit group dialog
related to CAM-2740

--- a/client/client/scripts/task/styles.less
+++ b/client/client/scripts/task/styles.less
@@ -271,7 +271,7 @@
     &:hover {
       z-index: 99;
       cursor: pointer;
-      border: 1px dashed @gray-light;
+      border: 1px @line-style @line-color;
       // background-color: transparent;
       background-color: @gray-lighter;
     }
