impr(groups): use CSS to limit size of groups field
related to CAM-2740

--- a/client/client/scripts/task/styles.less
+++ b/client/client/scripts/task/styles.less
@@ -275,4 +275,10 @@
       // background-color: transparent;
       background-color: @gray-lighter;
     }
+    > div {
+      overflow: hidden;
+      text-overflow: ellipsis;
+      max-width: 250px;
+      white-space: nowrap;
+    }
 }
