--- a/client/client/scripts/task/styles.less
+++ b/client/client/scripts/task/styles.less
@@ -266,19 +266,17 @@
     position: relative;
     // background-color: transparent;
 
-    border-radius: 3px;
-
     &:hover {
-      z-index: 99;
       cursor: pointer;
-      border: 1px @line-style @line-color;
-      // background-color: transparent;
-      background-color: @gray-lighter;
     }
     > div {
       overflow: hidden;
       text-overflow: ellipsis;
       max-width: 250px;
       white-space: nowrap;
+      height: 20px;
+      line-height: 20px;
+      display: inline-block;
+      vertical-align: bottom;
     }
 }
