--- a/client/client/styles/navbar.less
+++ b/client/client/styles/navbar.less
@@ -13,6 +13,10 @@
   &>.container-fluid .navbar-brand {
     margin-left: -10px;
   }
+
+  // [cam-layout-switcher] {
+  //   margin-top: 5px;
+  // }
 }
 
 
