feat(task info): add additional task information in the list

--- a/client/client/scripts/task/styles.less
+++ b/client/client/scripts/task/styles.less
@@ -255,37 +255,57 @@
   padding-right: (@grid-gutter-width / 2);
 }
 
+.actors {
+  margin: 0;
+  text-align: right;
+  > li {
+    &:last-child {
+      padding-right: 0;
+    }
+  }
+}
+
 #comment-form-message {
   height: 150px;
 }
 
-.groups {
-    border: 1px solid transparent;
-    margin: 0;
-    padding: 1px 3px;
-    position: relative;
-    // background-color: transparent;
+// .groups {
+//   border: 1px solid transparent;
+//   margin: 0;
+//   padding: 1px 3px;
+//   position: relative;
+//   // background-color: transparent;
 
-    &:hover {
-      cursor: pointer;
-    }
-    > div {
-      overflow: hidden;
-      text-overflow: ellipsis;
-      max-width: 250px;
-      white-space: nowrap;
-      height: 20px;
-      line-height: 20px;
-      display: inline-block;
-      vertical-align: bottom;
-    }
-}
+//   &:hover {
+//     cursor: pointer;
+//   }
+//   > div {
+//     overflow: hidden;
+//     text-overflow: ellipsis;
+//     max-width: 250px;
+//     white-space: nowrap;
+//     height: 20px;
+//     line-height: 20px;
+//     display: inline-block;
+//     vertical-align: bottom;
+//   }
+// }
 
-.group-action-header {
-  width: 1px;
-}
+// .group-action-header {
+//   width: 1px;
+// }
 
-.group-input {
-  width: auto;
-  display: inline;
-}
+
+// .group-input {
+//   width: auto;
+//   display: inline;
+//   border-radius: 3px;
+
+//   &:hover {
+//     z-index: 99;
+//     cursor: pointer;
+//     border: 1px @line-style @line-color;
+//     // background-color: transparent;
+//     background-color: @gray-lighter;
+//   }
+// }
