--- a/client/client/scripts/filter/styles.less
+++ b/client/client/scripts/filter/styles.less
@@ -88,18 +88,6 @@
     padding: 5px 0;
   }
 
-  // .key {
-  //   .font-bold;
-  // }
-
-  // .operator {
-  //   // .font-bold;
-  // }
-
-  // .value {
-  //   .font-italic;
-  // }
-
   &.current,
   &:hover {
     z-index: 2;
@@ -126,6 +114,7 @@
     padding: (@grid-gutter-width / 2) 0;
 
     min-height: 90px;
+    position: relative;
 
     &.active {
       position: relative;
@@ -161,8 +150,8 @@
 
     &:first-child {
       border-top: 0;
-      // padding-top: 0;
     }
+
     &:focus {
       outline: none;
       background-color: @gray-lighter;
@@ -171,6 +160,20 @@
     .names > h4 {
       margin-top: 0;
     }
+  }
+
+  .priority {
+    position: absolute;
+    z-index: 5;
+    top: 3px;
+    right: 0;
+    // width: 30px;
+    // height: 30px;
+    // line-height: 30px;
+    border-radius: 50%;
+    text-align: center;
+    color: @gray-light;
+    font-weight: bolder;
   }
 }
 
