impr(groups): use form-control style for group edit popup
related to CAM-2740

--- a/client/client/scripts/task/styles.less
+++ b/client/client/scripts/task/styles.less
@@ -280,3 +280,12 @@
       vertical-align: bottom;
     }
 }
+
+.group-action-header {
+  width: 1px;
+}
+
+.group-input {
+  width: auto;
+  display: inline;
+}
