impr(timepicker): limit the width of time inputs

--- a/client/client/scripts/form/styles.less
+++ b/client/client/scripts/form/styles.less
@@ -70,6 +70,12 @@
 
   .timepicker {
     margin: auto;
+    td {
+      text-align: center;
+    }
+    input {
+      width: 50px;
+    }
   }
 
   .btn-group {
